yaml/gateway/aws-vpc-lattice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
  - name: par-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: nginx
      kind: Service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /nginx
